<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:padding="5sp"
    android:gravity="center"
    android:orientation="horizontal">

    <com.google.android.material.card.MaterialCardView
        android:padding="4sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:layout_margin="4sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/img_popular"
                    android:contentDescription="@string/image_from_product"
                    android:layout_width="120sp"
                    android:layout_height="120sp"
                    android:layout_gravity="center"
                    android:foregroundGravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/logo" />

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_margin="4sp"
                android:orientation="vertical"
                android:layout_width="120sp"
                android:layout_height="120sp">

                <TextView
                    android:id="@+id/category_popular"
                    android:text="@string/minecraft_server"
                    android:textColor="@color/vhost_orange"
                    android:textSize="11sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/name_popular"
                    android:text="@string/coal"
                    android:textSize="18sp"
                    android:textColor="@color/vhost_orangeDarker"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    app:layout_constraintTop_toBottomOf="@+id/category_popular" />

                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30sp"
                    android:orientation="horizontal"
                    android:padding="2sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    app:layout_constraintTop_toBottomOf="@+id/name_popular">

                    <ImageView
                        android:contentDescription="@string/icon_from_location"
                        android:id="@+id/location_image_popular"
                        android:padding="1sp"
                        android:layout_width="18sp"
                        android:layout_height="18sp"
                        android:src="@drawable/ic_baseline_location"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView3"
                        app:layout_constraintTop_toBottomOf="@+id/name_popular" />

                    <TextView
                        android:id="@+id/location_popular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/barcelona_spain"
                        android:textColor="@color/grayMate"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/location_image_popular"
                        app:layout_constraintTop_toBottomOf="@+id/name_popular" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

                    <TextView
                        android:id="@+id/price_popular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_0_99"
                        android:textColor="@color/vhost_orange"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/price_expiration_popular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/month"
                        android:textColor="@color/grayMate"
                        android:textSize="12sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_gravity="top"
                android:layout_marginTop="4sp"
                android:layout_marginStart="75sp"
                android:layout_marginEnd="4sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:contentDescription="@string/star_from_rating"
                    android:layout_gravity="center"
                    android:layout_width="14sp"
                    android:layout_height="14sp"
                    android:layout_marginEnd="2sp"
                    android:src="@drawable/ic_star_rounded" />

                <TextView
                    android:text="@string/_4_9"
                    android:textSize="11sp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</LinearLayout>